Fix NPC sheet scrolling
- also fix scrollbars showing when they are not necessary

--- a/styles/scss/components/_forms.scss
+++ b/styles/scss/components/_forms.scss
@@ -210,7 +210,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   /* Sheet Body */
   .sheet-body,
